# adv_mla_lab_4

./: Makefile  README.md  Untitled.ipynb  poly.ipynb  pyproject.toml
adv_mla_lab_4/: __init__.py  dataset.py  features.py  plots.py
adv_mla_lab_4/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: linear_poly_2.joblib  ohe.joblib
