[tool.poetry]
name = "adv-mla-lab-4"
version = "0.1.0"
description = ""
authors = ["Sagar Thapa <sagar.thapa@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
